objects/ebsta1__User_Emails__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ebsta1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ebsta1__Emails_Received__c</fullName>
        <label>Emails Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__MailBox_Connection_Id__c</fullName>
        <label>MailBox Connection Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebsta1__MailBox_Connection_Username__c</fullName>
        <label>MailBox Connection Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebsta1__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ebsta1__User_Email__c</fullName>
        <label>User Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <label>User Emails</label>
    <listViews>
        <fullName>ebsta1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>User Emails</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>